--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="estiloindex.css">
+    <link rel="stylesheet" href="estilos.css">
     <title>Soflu</title>
     
 </head>
@@ -42,6 +42,17 @@
             </div>
         </div>
     </header>
+    <nav>
+        <div class="navegador">
+        <ul>
+            <li><a class="active" href="index.html">Inicio</a></li>
+            <li><a href="productos.html">Productos</a></li>
+            <li><a href="descuentos.html">Descuentos</a></li>
+            <li><a href="aaaaa">Pastelería</a></li>
+            <li><a href="contacto.html">Contacto</a></li>
+          </ul>
+        </div>
+    </nav>
     <main>
         <div class="carrusel">
             
