--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="estilos.css">
+    <link rel="stylesheet" href="estiloindex.css">
     <title>Soflu</title>
     
 </head>
@@ -48,7 +48,7 @@
             <li><a class="active" href="index.html">Inicio</a></li>
             <li><a href="productos.html">Productos</a></li>
             <li><a href="descuentos.html">Descuentos</a></li>
-            <li><a href="aaaaa">Pastelería</a></li>
+            <li><a href="pasteleria.html">Pastelería</a></li>
             <li><a href="contacto.html">Contacto</a></li>
           </ul>
         </div>
@@ -57,25 +57,27 @@
         <div class="carrusel">
             
         </div>
-        <div class="contenedor">
-            <a href="productos.html"><div class="carta">
-                <h1>Productos</h1>
+        <div class="contenedorcartasprincipal">
+            <a href="productos.html"><div class="cartaprincipal">
+                <h1>PRODUCTOS</h1>
             </div></a>
-            <a href="descuentos.html"><div class="carta">
-                <h1>Descuentos</h1>
+            <a href="descuentos.html"><div class="cartaprincipal">
+                <h1>DESCUENTOS</h1>
             </div></a>
-            <a href=""><div class="carta">
-                <h1>Pasteleria Soflu</h1>
+            <a href="pasteleria.html"><div class="cartaprincipalpasteleria">
+                <h1>Pasteleria soflu</h1>
             </div></a>
-            <a href="contacto.html"><div class="carta">
-                <h1>Contacto</h1>
+            <a href="contacto.html"><div class="cartaprincipal">
+                <h1>CONTACTO</h1>
             </div></a>
         </div>
 
     </main>
     <footer>
-        <h3>casa.ferretera.soflu.ok</h3>
-        <h3>Tel. 1145268587</h3>
+        <div class="textofooter">
+            <h3>casa.ferretera.soflu.ok</h3>
+            <h3>Tel. 1145268587</h3>
+        </div>
     </footer>
 </body>
 </html>
