--- a/pasteleria.html
+++ b/pasteleria.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <img class="header-icon" src="logo.png">
+        <a href="index.html"><img class="header-icon" src="logo.png"></a>
         <h1 class="header-titulo">SOFLU</h1>
         <h2 class="header-desc">Ferreterías profesionales</h2>
         <div class="header-menu">
