--- a/productos.html
+++ b/productos.html
@@ -52,42 +52,66 @@
           </ul>
         </div>
     </nav>
-    <main>
+            <div class="producto">
+            <div class="imagenproducto">
+                <img class="imagenproducto" src="tornillo.jpg" alt="">
+            </div>
+            <div class="infoproducto">
+                <h3>Clavo a rosca 17mm Ø 5/16 + Base Oval x1 Unid</h4>
+                <h2>$35.500</h3>
+                <h4>Llega el 28/11/2024</h4>
+            </div>
+        </div>
+       <main> 
         <div class="producto">
-            <img src="tornillo.jpg" alt="">
-            <h4>Clavo a rosca 17mm Ø 5/16 + Base Oval x1 Unid</h4>
-            <h3>$35.500</h3>
-            <h4>Llega el 28/11/2024</h4>
+            <div class="imagenproducto">
+                <img class="imagenproducto" src="repuesto.jpg" alt="">
+            </div>
+            <div class="infoproducto">
+                <h3>Repuesto de la cosa esta x27 Unidades</h4>
+                <h2>$45,50</h3>
+                <h4>Llega el 02/05/2013</h4>
+            </div>
         </div>
         <div class="producto">
-            <img src="repuesto.jpg" alt="">
-            <h4>Repuesto de la cosa esta x27 Unidades</h4>
-            <h3>$45,50</h3>
-            <h4>Llega el 02/05/2013</h4>
+            <div class="imagenproducto">
+                <img class="imagenproducto" src="taladro.jpg" alt="">
+            </div>
+            <div class="infoproducto">
+                <h3 class="descripcionproducto">Porque yoo soy del taladro, yoo lo sigo a todos lados, no me importa donde jjjuegue, yo voy a cualquier lugar, te llevo en la sangre no lo puedo evitarr</h4>
+                <h2 class="precioproducto">$1.980</h3>
+                <h4>Llega hoy</h4>
+            </div>
         </div>
         <div class="producto">
-            <img src="taladro.jpg" alt="">
-            <h4>Porque yoo soy del taladro, yoo lo sigo a todos lados, no me importa donde jjjuegue, yo voy a cualquier lugar, te llevo en la sangre no lo puedo evitarr</h4>
-            <h3>$1.980</h3>
-            <h4>Llega hoy</h4>
+            <div class="imagenproducto">
+                <img class="imagenproducto" src="" alt="">
+            </div>
+            <div class="infoproducto">
+                <h4></h4>
+                <h3></h3>
+                <h4></h4>
+            </div>
         </div>
         <div class="producto">
-            <img src="" alt="">
-            <h4></h4>
-            <h3></h3>
-            <h4></h4>
+            <div class="imagenproducto">
+                <img class="imagenproducto" src="" alt="">
+            </div>
+            <div class="infoproducto">
+                <h4></h4>
+                <h3></h3>
+                <h4></h4>
+            </div>
         </div>
         <div class="producto">
-            <img src="" alt="">
-            <h4></h4>
-            <h3></h3>
-            <h4></h4>
-        </div>
-        <div class="producto">
-            <img src="" alt="">
-            <h4></h4>
-            <h3></h3>
-            <h4></h4>
+            <div class="imagenproducto">
+                <img class="imagenproducto" src="" alt="">
+            </div>
+            <div class="infoproducto">
+                <h4></h4>
+                <h3></h3>
+                <h4></h4>
+            </div>
         </div>
     </main>
     <aside>
