--- a/productos.html
+++ b/productos.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="estiloproductos.css">
-    <title>Productos - SOFLU</title>
+    <title>Soflu - Productos</title>
 </head>
 <body>
     <header>
-        <a href="index.html"><img class="header-icon" src="logo.png"></a>
+        <img class="header-icon" src="logo.png">
         <h1 class="header-titulo">SOFLU</h1>
         <h2 class="header-desc">Ferreterías profesionales</h2>
         <div class="header-menu">
@@ -52,17 +52,8 @@
           </ul>
         </div>
     </nav>
-            <div class="producto">
-            <div class="imagenproducto">
-                <img class="imagenproducto" src="tornillo.jpg" alt="">
-            </div>
-            <div class="infoproducto">
-                <h3>Clavo a rosca 17mm Ø 5/16 + Base Oval x1 Unid</h4>
-                <h2>$35.500</h3>
-                <h4>Llega el 28/11/2024</h4>
-            </div>
-        </div>
-       <main> 
+    <main>
+       <div class="flexprod">
         <div class="producto">
             <div class="imagenproducto">
                 <img class="imagenproducto" src="repuesto.jpg" alt="">
@@ -113,14 +104,15 @@
                 <h4></h4>
             </div>
         </div>
+        </div>
     </main>
     <aside>
         <div class="publicidad">  
-            <a href="https://www.google.com/"><img src="google.jpg" alt="">
+            <a href="https://www.google.com/"><img src="google." alt="">
             <h4>Google es el buscador mas utilizado del mundo. Unete ya!, 25% de descuento en tu subscripcion.</h4></a>
         </div>
         <div class="publicidad">  
-            <a href="https://www.youtube.com/watch?v=a9EIx2CJE64"><img src="febratic.jpg" alt="">
+            <a href="https://www.youtube.com/watch?v=a9EIx2CJE64"><img src="febratic.j" alt="">
             <h4>Top 5 mejores remedios YA!</h4></a>
         </div>
         <div class="publicidad">  
