--- a/contacto.html
+++ b/contacto.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="estilocontacto.css">
-    <title>Contacto - SOFLU</title>
+    <title>Soflu - Contacto</title>
 </head>
 <body>
     <header>
