--- a/descuentos.html
+++ b/descuentos.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <a href="index.html"><img class="header-icon" src="logo.png"></a>
+        <img class="header-icon" src="logo.png">
         <h1 class="header-titulo">SOFLU</h1>
         <h2 class="header-desc">Ferreterías profesionales</h2>
         <div class="header-menu">
@@ -41,6 +41,7 @@
             </div>
         </div>
     </header>
+
     <nav>
         <div class="navegador">
         <ul>
@@ -52,22 +53,134 @@
           </ul>
         </div>
     </nav>
+
     <main>
-        <div class="contenedordesc">
-            <div class="carta2">
-                <h1>Productos</h1>
+        <div class="blanq"></div>
+        <section>
+            <div class="container">
+                <div class="fila1">
+                    <div class="carta1">
+                        <div class="card">
+                            <img src="/img/img 2.jpg">
+                            <div class="card-body">
+                              <h5 class="card-title">OFERTA</h5>
+                              <p class="card-text">Remera Oversize Unisex de algodón, talle XSS</p>
+                            </div>
+                            <div class="precio">
+                                <h4>1500</h4>
+                            </div>
+                          </div>
+                    </div>
+
+                    <div class="carta2">
+                        <div class="card">
+                            <img src="/img/img 2.jpg">
+                            <div class="card-body">
+                              <h5 class="card-title">OFERTA</h5>
+                              <p class="card-text">Remera Oversize Unisex de algodón, talle XSS</p>
+                            </div>
+                            <div class="precio">
+                                <h4>1500</h4>
+                            </div>
+                          </div>
+                    </div>
+
+                    <div class="carta3">
+                        <div class="card">
+                            <img src="/img/img 2.jpg">
+                            <div class="card-body">
+                              <h5 class="card-title">OFERTA</h5>
+                              <p class="card-text">Remera Oversize Unisex de algodón, talle XSS</p>
+                            </div>
+                            <div class="precio">
+                                <h4>1500</h4>
+                            </div>
+                          </div>
+                    </div>
+                </div>
+                <div class="fila2">
+                    <div class="carta4">
+                        <div class="card">
+                            <img src="/img/img 2.jpg">
+                            <div class="card-body">
+                              <h5 class="card-title">OFERTA</h5>
+                              <p class="card-text">Remera Oversize Unisex de algodón, talle XSS</p>
+                            </div>
+                            <div class="precio">
+                                <h4>1500</h4>
+                            </div>
+                          </div>
+                    </div>
+
+                    <div class="carta5">
+                        <div class="card">
+                            <img src="/img/img 2.jpg">
+                            <div class="card-body">
+                              <h5 class="card-title">OFERTA</h5>
+                              <p class="card-text">Remera Oversize Unisex de algodón, talle XSS</p>
+                            </div>
+                            <div class="precio">
+                                <h4>1500</h4>
+                            </div>
+                          </div>
+                    </div>
+
+                    <div class="carta6">
+                        <div class="card">
+                            <img src="/img/img 2.jpg">
+                            <div class="card-body">
+                              <h5 class="card-title">OFERTA</h5>
+                              <p class="card-text">Remera Oversize Unisex de algodón, talle XSS</p>
+                            </div>
+                            <div class="precio">
+                                <h4>1500</h4>
+                            </div>
+                          </div>
+                    </div>
+                </div>
+                <div class="fila3">
+                    <div class="carta7">
+                        <div class="card">
+                            <img src="/img/img 2.jpg">
+                            <div class="card-body">
+                              <h5 class="card-title">OFERTA</h5>
+                              <p class="card-text">Remera Oversize Unisex de algodón, talle XSS</p>
+                            </div>
+                            <div class="precio">
+                                <h4>1500</h4>
+                            </div>
+                          </div>
+                    </div>
+
+                    <div class="carta8">
+                        <div class="card">
+                            <img src="/img/img 2.jpg">
+                            <div class="card-body">
+                              <h5 class="card-title">OFERTA</h5>
+                              <p class="card-text">Remera Oversize Unisex de algodón, talle XSS</p>
+                            </div>
+                            <div class="precio">
+                                <h4>1500</h4>
+                            </div>
+                          </div>
+                    </div>
+
+                    <div class="carta9">
+                        <div class="card">
+                            <img src="/img/img 2.jpg">
+                            <div class="card-body">
+                              <h5 class="card-title">OFERTA</h5>
+                              <p class="card-text">Remera Oversize Unisex de algodón, talle XSS</p>
+                            </div>
+                            <div class="precio">
+                                <h4>1500</h4>
+                            </div>
+                          </div>
+                    </div>
+                </div>
             </div>
-            <div class="carta2">
-                <h1>Descuentos</h1>
-            </div>
-            <div class="carta2">
-                <h1>Pasteleria Soflu</h1>
-            </div>
-            <div class="carta2">
-                <h1>Contacto</h1>
-            </div>
-        </div>
-    </main>
+        </section>
+        
     <aside>
         <div class="publicidad">  
             <a href=""><img src="" alt="">
@@ -94,6 +207,7 @@
             <h4></h4></a>
         </div>
     </aside>
+    
     <footer>
         <h3>casa.ferretera.soflu.ok</h3>
         <h3>Tel. 1145268587</h3>
