--- a/contacto.html
+++ b/contacto.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <a href="index.html"><img class="header-icon" src="logo.png"></a>
+        <img class="header-icon" src="logo.png">
         <h1 class="header-titulo">SOFLU</h1>
         <h2 class="header-desc">Ferreterías profesionales</h2>
         <div class="header-menu">
@@ -41,6 +41,7 @@
             </div>
         </div>
     </header>
+
     <nav>
         <div class="navegador">
         <ul>
@@ -52,6 +53,7 @@
           </ul>
         </div>
     </nav>
+    <div class="blanq"></div>
     <main>
         <div class="nosotros">
             <!--Agregar video-->
