--- a/productos.html
+++ b/productos.html
@@ -52,11 +52,12 @@
           </ul>
         </div>
     </nav>
+    <div class="blanq"></div>
     <main>
        <div class="flexprod">
         <div class="producto">
             <div class="imagenproducto">
-                <img class="imagenproducto" src="repuesto.jpg" alt="">
+                <img class="imagenproducto" src="" alt="">
             </div>
             <div class="infoproducto">
                 <h3>Repuesto de la cosa esta x27 Unidades</h4>
@@ -66,7 +67,17 @@
         </div>
         <div class="producto">
             <div class="imagenproducto">
-                <img class="imagenproducto" src="taladro.jpg" alt="">
+                <img class="imagenproducto" src="" alt="">
+            </div>
+            <div class="infoproducto">
+                <h3 class="descripcionproducto">Porque yoo soy del taladro, yoo lo sigo a todos lados, no me importa donde jjjuegue, yo voy a cualquier lugar, te llevo en la sangre no lo puedo evitarr</h4>
+                <h2 class="precioproducto">$1.980</h3>
+                <h4>Llega hoy</h4>
+            </div>
+        </div>
+        <div class="producto">
+            <div class="imagenproducto">
+                <img class="imagenproducto" src="" alt="">
             </div>
             <div class="infoproducto">
                 <h3 class="descripcionproducto">Porque yoo soy del taladro, yoo lo sigo a todos lados, no me importa donde jjjuegue, yo voy a cualquier lugar, te llevo en la sangre no lo puedo evitarr</h4>
@@ -108,12 +119,12 @@
     </main>
     <aside>
         <div class="publicidad">  
-            <a href="https://www.google.com/"><img src="google." alt="">
-            <h4>Google es el buscador mas utilizado del mundo. Unete ya!, 25% de descuento en tu subscripcion.</h4></a>
+            <a href=""><img src="" alt="">
+            <h4></h4></a>
         </div>
         <div class="publicidad">  
-            <a href="https://www.youtube.com/watch?v=a9EIx2CJE64"><img src="febratic.j" alt="">
-            <h4>Top 5 mejores remedios YA!</h4></a>
+            <a href=""><img src="" alt="">
+            <h4></h4></a>
         </div>
         <div class="publicidad">  
             <a href=""><img src="" alt="">
