--- a/descuentos.html
+++ b/descuentos.html
@@ -61,39 +61,39 @@
                 <div class="fila1">
                     <div class="carta1">
                         <div class="card">
-                            <img src="/img/img 2.jpg">
+                            <img src="martillo.jpg">
                             <div class="card-body">
                               <h5 class="card-title">OFERTA</h5>
-                              <p class="card-text">Remera Oversize Unisex de algodón, talle XSS</p>
+                              <p class="card-text">Martillo resistente de Goma x1U</p>
                             </div>
                             <div class="precio">
-                                <h4>1500</h4>
+                                <h4>10 peso</h4>
                             </div>
                           </div>
                     </div>
 
                     <div class="carta2">
                         <div class="card">
-                            <img src="/img/img 2.jpg">
+                            <img src="sierra.png">
                             <div class="card-body">
                               <h5 class="card-title">OFERTA</h5>
-                              <p class="card-text">Remera Oversize Unisex de algodón, talle XSS</p>
+                              <p class="card-text">Kit Milei Motosierra disfraz Jalowin</p>
                             </div>
                             <div class="precio">
-                                <h4>1500</h4>
+                                <h4>10 USD</h4>
                             </div>
                           </div>
                     </div>
 
                     <div class="carta3">
                         <div class="card">
-                            <img src="/img/img 2.jpg">
+                            <img src="coso.jpg">
                             <div class="card-body">
                               <h5 class="card-title">OFERTA</h5>
-                              <p class="card-text">Remera Oversize Unisex de algodón, talle XSS</p>
+                              <p class="card-text">Cosa sostenedora Pegatina pared Muy bueno</p>
                             </div>
                             <div class="precio">
-                                <h4>1500</h4>
+                                <h4>$15000</h4>
                             </div>
                           </div>
                     </div>
@@ -101,39 +101,39 @@
                 <div class="fila2">
                     <div class="carta4">
                         <div class="card">
-                            <img src="/img/img 2.jpg">
+                            <img src="casco.jpg">
                             <div class="card-body">
                               <h5 class="card-title">OFERTA</h5>
-                              <p class="card-text">Remera Oversize Unisex de algodón, talle XSS</p>
+                              <p class="card-text">Casco para la Cabeza color Negro Marron</p>
                             </div>
                             <div class="precio">
-                                <h4>1500</h4>
+                                <h4>$3</h4>
                             </div>
                           </div>
                     </div>
 
                     <div class="carta5">
                         <div class="card">
-                            <img src="/img/img 2.jpg">
+                            <img src="pega.jpg">
                             <div class="card-body">
                               <h5 class="card-title">OFERTA</h5>
-                              <p class="card-text">Remera Oversize Unisex de algodón, talle XSS</p>
+                              <p class="card-text">Pegamento Universal Uhu Pegamil Poxirran</p>
                             </div>
                             <div class="precio">
-                                <h4>1500</h4>
+                                <h4>$2482.23</h4>
                             </div>
                           </div>
                     </div>
 
                     <div class="carta6">
                         <div class="card">
-                            <img src="/img/img 2.jpg">
+                            <img src="mochila.avif">
                             <div class="card-body">
                               <h5 class="card-title">OFERTA</h5>
-                              <p class="card-text">Remera Oversize Unisex de algodón, talle XSS</p>
+                              <p class="card-text">Mochila de Inodoro 11L x2U Paga 2 Lleva 1</p>
                             </div>
                             <div class="precio">
-                                <h4>1500</h4>
+                                <h4>$349990</h4>
                             </div>
                           </div>
                     </div>
@@ -141,39 +141,39 @@
                 <div class="fila3">
                     <div class="carta7">
                         <div class="card">
-                            <img src="/img/img 2.jpg">
+                            <img src="tacha.jpg">
                             <div class="card-body">
                               <h5 class="card-title">OFERTA</h5>
-                              <p class="card-text">Remera Oversize Unisex de algodón, talle XSS</p>
+                              <p class="card-text">Tachas Caja Ahorro Grande 50608 Unidades</p>
                             </div>
                             <div class="precio">
-                                <h4>1500</h4>
+                                <h4>$0.50</h4>
                             </div>
                           </div>
                     </div>
 
                     <div class="carta8">
                         <div class="card">
-                            <img src="/img/img 2.jpg">
+                            <img src="tuerca.jpg">
                             <div class="card-body">
                               <h5 class="card-title">OFERTA</h5>
-                              <p class="card-text">Remera Oversize Unisex de algodón, talle XSS</p>
+                              <p class="card-text">tuerca</p>
                             </div>
                             <div class="precio">
-                                <h4>1500</h4>
+                                <h4>$tuerca</h4>
                             </div>
                           </div>
                     </div>
 
                     <div class="carta9">
                         <div class="card">
-                            <img src="/img/img 2.jpg">
+                            <img src="esto.jpg">
                             <div class="card-body">
                               <h5 class="card-title">OFERTA</h5>
-                              <p class="card-text">Remera Oversize Unisex de algodón, talle XSS</p>
+                              <p class="card-text">Esto que parece un Timbre pero es Otra Cosa</p>
                             </div>
                             <div class="precio">
-                                <h4>1500</h4>
+                                <h4>$???</h4>
                             </div>
                           </div>
                     </div>
