--- a/productos.html
+++ b/productos.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <img class="header-icon" src="logo.png">
+        <a href="index.html"><img class="header-icon" src="logo.png"></a>
         <h1 class="header-titulo">SOFLU</h1>
         <h2 class="header-desc">Ferreterías profesionales</h2>
         <div class="header-menu">
@@ -67,7 +67,7 @@
         </div>
         <div class="producto">
             <div class="imagenproducto">
-                <img class="imagenproducto" src="" alt="">
+                <img class="taladro" src="taladro.jpg" alt="">
             </div>
             <div class="infoproducto">
                 <h3 class="descripcionproducto">Porque yoo soy del taladro, yoo lo sigo a todos lados, no me importa donde jjjuegue, yo voy a cualquier lugar, te llevo en la sangre no lo puedo evitarr</h4>
@@ -76,8 +76,8 @@
             </div>
         </div>
         <div class="producto">
-            <div class="imagenproducto">
-                <img class="imagenproducto" src="" alt="">
+            <div class="producto">
+                <img class="repuesto" src="repuesto.jpg" alt="">
             </div>
             <div class="infoproducto">
                 <h3 class="descripcionproducto">Porque yoo soy del taladro, yoo lo sigo a todos lados, no me importa donde jjjuegue, yo voy a cualquier lugar, te llevo en la sangre no lo puedo evitarr</h4>
