--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
     <header>
-        <img class="header-icon" src="logo.png">
+        <a href="index.html"><img class="header-icon" src="logo.png"></a>
         <h1 class="header-titulo">SOFLU</h1>
         <h2 class="header-desc">Ferreterías profesionales</h2>
         <div class="header-menu">
