--- a/index.html
+++ b/index.html
@@ -85,7 +85,8 @@
         </div></a>
     </div>
     <footer>
-        <h3>casa.ferretera.soflu.ok</h3>
+        <div class="inst"><img class="ilogo" src="insticon.png">
+        <h3>casa.ferretera.soflu.ok</h3></div>
         <h3>Tel. 1145268587</h3>
     </footer>
 </body>
