--- a/pasteleria.html
+++ b/pasteleria.html
@@ -218,7 +218,8 @@ Batir a velocidad media hasta que se forme el merengue y agregar una cucharada d
             </div>
     </main>
     <footer>
-        <h3>casa.ferretera.pastelera.soflu.ok</h3>
+        <div class="inst"><img class="ilogo" src="insticon.png">
+        <h3>casa.ferretera.soflu.ok</h3></div>
         <h3>Tel. 1145268587</h3>
     </footer>
 </body>
