--- a/productos.html
+++ b/productos.html
@@ -144,7 +144,8 @@
         </div>
     </aside>
     <footer>
-        <h3>casa.ferretera.soflu.ok</h3>
+        <div class="inst"><img class="ilogo" src="insticon.png">
+        <h3>casa.ferretera.soflu.ok</h3></div>
         <h3>Tel. 1145268587</h3>
     </footer>
 </body>
