--- a/contacto.html
+++ b/contacto.html
@@ -56,24 +56,43 @@
     <div class="blanq"></div>
     <main>
         <div class="nosotros">
-            <!--Agregar video-->
-            <h2>Sobre nosotros</h2>
-            <h3>lakjfc</h3>
+            <div class="video">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/Bf5MGvTk4l4?si=nglgSRdqoOjyLUyd" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            </div>
+            <div class="texto">
+                <h1 class="titulo">SOBRE NOSOTROS</h1>
+                <h3>Somos una empresa nacida en inicios del año 2023, gracias a la accion de dos amigas llamadas Sofia Sguera y Ludmila Tynik, que debian realizar un trabajo practico para la materia de computacion con el profesor Francisco Parisi en el Colegio Manuel Belgrano de Temperley en su ultimo año de colegio. El objetivo era hacer un modelo de pagina web en Phoptoshop, para realizarlo en HTML a fin de año, y sus creadoras estan muy felices de ser capaces de llevarlo a cabo en esta instancia del año!</h3>
+            </div>
         </div>
         <div class="contacto">
-            <table>
+            <table style="margin: 0 auto;">
                 <tr>
-                    <td>Locales</td>
-                    <td>Redes</td>
-                    <td>Atencion al Cliente</td>
+                    <td class="textocuadro">Locales</td>
+                    <td class="textocuadro">Redes</td>
+                    <td class="textocuadro">Atencion al Cliente</td>
                 </tr>
                 <tr>
-                    <td>sss</td>
-                    <td>ddd</td>
-                    <td>ccc</td>
+                    <td class="textocuadro">-Chilavert 6770, LUGANO (cap)<br>-Acevedo 73, LOMAS DE ZAMORA(bsas)<br>-Av.A.Jonte 4615, MONTE CASTRO(cap)<br></td>
+                    <td class="textocuadro">-Instagram: casa.ferretera.soflu.ok<br>-TikTok: @divertite.con.sofllu <br> -X: @polemic.opinions.soflu <br> -Fotolog: @tu^`Soflùùù·kute<br></td>
+                    <td class="textocuadro">-Tel. 1145268587 <br> -Mail: casa.ferretera.soflu@gmail.com<br></td>
                 </tr>
             </table>
         </div>
+        <div class="clientes">
+            <div class="texto">
+                <h1 class="tituloop">OPINIONES DE CLIENTES</h1>
+            </div>
+            <div class="videoop">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/hN_-HWJuY1E?si=eYiw2awQLzUmaKW3" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            </div>
+            
     </main>
+    <footer>
+        <div class="instagram"> 
+            <img class="ilogo" src="insticon.png">
+            <h3 class="textoig">casa.ferretera.soflu.ok</h3>
+        </div>
+        <h3>Tel. 1145268587</h3>
+    </footer>
 </body>
 </html>
