--- a/index.html
+++ b/index.html
@@ -85,8 +85,10 @@
         </div></a>
     </div>
     <footer>
-        <div class="inst"><img class="ilogo" src="insticon.png">
-        <h3>casa.ferretera.soflu.ok</h3></div>
+        <div class="instagram"> 
+            <img class="ilogo" src="insticon.png">
+            <h3 class="textoig">casa.ferretera.soflu.ok</h3>
+        </div>
         <h3>Tel. 1145268587</h3>
     </footer>
 </body>
