--- a/productos.html
+++ b/productos.html
@@ -56,96 +56,98 @@
     <main>
        <div class="flexprod">
         <div class="producto">
-            <div class="imagenproducto">
-                <img class="imagenproducto" src="" alt="">
+            <div class="imagenproductos">
+                <img class="imagenproducto" src="tornillo.jpg" alt="">
             </div>
             <div class="infoproducto">
                 <h3>Repuesto de la cosa esta x27 Unidades</h4>
                 <h2>$45,50</h3>
-                <h4>Llega el 02/05/2013</h4>
+                <h4 class="envio">Llega el 02/05/2013</h4>
             </div>
         </div>
         <div class="producto">
-            <div class="imagenproducto">
-                <img class="taladro" src="taladro.jpg" alt="">
+            <div class="imagenproductos">
+                <img class="imagenproducto" src="taladro.jpg" alt="">
             </div>
             <div class="infoproducto">
                 <h3 class="descripcionproducto">Porque yoo soy del taladro, yoo lo sigo a todos lados, no me importa donde jjjuegue, yo voy a cualquier lugar, te llevo en la sangre no lo puedo evitarr</h4>
                 <h2 class="precioproducto">$1.980</h3>
-                <h4>Llega hoy</h4>
+                <h4 class="envio">Llega hoy</h4>
             </div>
         </div>
         <div class="producto">
-            <div class="producto">
-                <img class="repuesto" src="repuesto.jpg" alt="">
+            <div class="imagenproductos">
+                <img class="imagenproducto" src="repuesto.jpg" alt="">
             </div>
             <div class="infoproducto">
                 <h3 class="descripcionproducto">Porque yoo soy del taladro, yoo lo sigo a todos lados, no me importa donde jjjuegue, yo voy a cualquier lugar, te llevo en la sangre no lo puedo evitarr</h4>
                 <h2 class="precioproducto">$1.980</h3>
-                <h4>Llega hoy</h4>
+                <h4 class="envio">Llega hoy</h4>
             </div>
         </div>
         <div class="producto">
-            <div class="imagenproducto">
-                <img class="imagenproducto" src="" alt="">
+            <div class="imagenproductos">
+                <img class="imagenproducto" src="destornilladores.jpg" alt="">
             </div>
             <div class="infoproducto">
-                <h4></h4>
-                <h3></h3>
-                <h4></h4>
+                <h3 class="descripcionproducto">Desenrosca clavos a rosca en varios tamaños - hay medianos, grandes y chicos </h4>
+                <h2 class="precioproducto"> $6000000</h2>
+                <h4 class="envio">Llega el miercoles que viene</h4>
             </div>
         </div>
         <div class="producto">
-            <div class="imagenproducto">
-                <img class="imagenproducto" src="" alt="">
+            <div class="imagenproductos">
+                <img class="imagenproducto" src="cintametrica.jpeg" alt="">
             </div>
             <div class="infoproducto">
-                <h4></h4>
-                <h3></h3>
-                <h4></h4>
+                <h3 class="descripcionproducto">Cinta metrica pulgadas y hectometros- Mide hasta 3 metros</h3>
+                <h2 class="precioproducto">$783</h2>
+                <h4 class="envio">Creo que para mañana llega</h4>
             </div>
         </div>
         <div class="producto">
-            <div class="imagenproducto">
-                <img class="imagenproducto" src="" alt="">
+            <div class="imagenproductos">
+                <img class="imagenproducto" src="caballetes.jpeg" alt="">
             </div>
             <div class="infoproducto">
-                <h4></h4>
-                <h3></h3>
-                <h4></h4>
+                <h3 class="descripcionproducto">Set x34 caballetes de madera barnizada reforzados sistemna ultra anti-deslizante</h3>
+                <h2 class="precioproducto">$46788</h2>
+                <h4 class="envio"> Llega el 15/07/2026</h4>
             </div>
         </div>
         </div>
     </main>
     <aside>
-        <div class="publicidad">  
-            <a href=""><img src="" alt="">
-            <h4></h4></a>
-        </div>
-        <div class="publicidad">  
-            <a href=""><img src="" alt="">
-            <h4></h4></a>
-        </div>
-        <div class="publicidad">  
-            <a href=""><img src="" alt="">
-            <h4></h4></a>
-        </div>
-        <div class="publicidad">  
-            <a href=""><img src="" alt="">
-            <h4></h4></a>
-        </div>
-        <div class="publicidad">  
-            <a href=""><img src="" alt="">
-            <h4></h4></a>
-        </div>
-        <div class="publicidad">  
-            <a href=""><img src="" alt="">
-            <h4></h4></a>
+        <div class="publicidades"> 
+            <div class="publicidad">  
+                <a href="https://www.google.com/?hl=es" >
+                    <img src="google.jpg" alt="" class="imagenpubli">
+                    <h4>Google es el buscador mas utilizado del muundo. Unete ya!! 25% de descuento en tu primer suscripcion.</h4>
+                </a>
+            </div>
+            <div class="publicidad">  
+                <a href="https://www.lavanguardia.com/vivo/lifestyle/20211011/7767381/remedios-naturales-base-hierbas-plantas-males-dia-dia.html">
+                    <img src="febratic.jpg" alt="" class="imagenpubli">
+                    <h4>Top 10 mejores remedios. Leenos ahora y deja tu opinion!!!!!</h4>
+                </a>
+                <div class="publicidad">  
+                    <a href="https://www.mercadolibre.com.ar/chocolate-kit-kat-nestle-extra-milk-cocoa-caja/p/MLA24834484?pdp_filters=category:MLA194317#searchVariation=MLA24834484&position=1&search_layout=stack&type=product&tracking_id=384daf33-c817-419d-88a0-55133ec39d64" >
+                        <img src="kitkat.jpeg" alt="" class="imagenpubli">
+                        <h4>MMMM creo que te agarro hambre... Comprate ya estos KitKat super ricos!!!!!.</h4>
+                    </a>
+                    <div class="publicidad">  
+                        <a href="https://www.friv.com/">
+                            <img src="friv.jpg" alt="" class="imagenpubli">
+                            <h4>Aburrido? create una cuenta en JuegosFriv ahora y empeza a divertirte!.</h4>
+                        </a>
+            </div>
         </div>
     </aside>
     <footer>
-        <div class="inst"><img class="ilogo" src="insticon.png">
-        <h3>casa.ferretera.soflu.ok</h3></div>
+        <div class="instagram"> 
+            <img class="ilogo" src="insticon.png">
+            <h3 class="textoig">casa.ferretera.soflu.ok</h3>
+        </div>
         <h3>Tel. 1145268587</h3>
     </footer>
 </body>
