--- a/descuentos.html
+++ b/descuentos.html
@@ -180,38 +180,12 @@
                 </div>
             </div>
         </section>
-        
-    <aside>
-        <div class="publicidad">  
-            <a href=""><img src="" alt="">
-            <h4></h4></a>
-        </div>
-        <div class="publicidad">  
-            <a href=""><img src="" alt="">
-            <h4></h4></a>
-        </div>
-        <div class="publicidad">  
-            <a href=""><img src="" alt="">
-            <h4></h4></a>
-        </div>
-        <div class="publicidad">  
-            <a href=""><img src="" alt="">
-            <h4></h4></a>
-        </div>
-        <div class="publicidad">  
-            <a href=""><img src="" alt="">
-            <h4></h4></a>
-        </div>
-        <div class="publicidad">  
-            <a href=""><img src="" alt="">
-            <h4></h4></a>
-        </div>
-    </aside>
-    
     <footer>
-        <div class="inst"><img class="ilogo" src="insticon.png">
-        <h3>casa.ferretera.soflu.ok</h3></div>
-        <h3>Tel. 1145268587</h3>
+        <div class="instagram"> 
+            <img class="ilogo" src="insticon.png">
+            <h3 class="textoig">casa.ferretera.soflu.ok</h3>
+        </div>
+        <h3 class="textotel">Tel. 1145268587</h3>
     </footer>
 </body>
 </html>
